# VisiCore

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Directory.Build.props  LICENSE  LICENSE.zh-CN.md  NOTICE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  compose.yaml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  promote-release.yml  release.yml  staging-validation.yml
deploy/core/: Dockerfile  core-host-agent.json.example  entrypoint.sh  install-core-host-agent.sh  mediamtx.yml  nginx-server.conf  nginx.conf  visicore-core-host-agent.service
deploy/edge-host-agent/: host-agent.linux.json.example  install-linux-host-agent.sh  visicore-edge-host-agent.service
deploy/linux/: Dockerfile.dotnet  edge-agent.compose.yaml  edge-agent.env.example  edge-node-entrypoint.sh  mediamtx.yml
deploy/staging/: README.md  compose.yaml  staging.env.example
deploy/windows/: Product.wxs  ViewerProduct.wxs  VisiCore.EdgeNode.Installer.wixproj  VisiCore.Viewer.Installer.wixproj  host-agent.windows.json.example  visicore-mpv-runtime.json.example
docs/: api-module-conventions.md  edge-node-deployment.md  mediamtx-external.md  observability.md  设备插件.md
openspec/: AGENTS.md  config.yaml
src/VideoPlatform.Admin/: index.html  nginx.conf  package-lock.json  package.json  tsconfig.node.json
src/VideoPlatform.Api/: AccountPasswordService.cs  AssemblyInfo.cs  AuditService.cs  AuditedExportDownloadResult.cs  ClockMonitoringOptions.cs  DatabaseReadinessHealthCheck.cs  DevicePluginCapabilityService.cs  DevicePluginService.cs  DevicePluginTrustOptions.cs  DeviceWorkerControlService.cs  DeviceWorkerOperationStatusService.cs  DirectCameraAddressPolicy.cs  EdgeCommandControlService.cs  EdgeOperationReadinessOptions.cs  EdgeOperationReadinessService.cs  ExportArtifactCleanupService.cs  ExportArtifactStorage.cs  LinuxEdgeAgentControlService.cs  NotificationChannelRequestValidator.cs  PlatformAccessService.cs  PlatformBootstrapService.cs  PlatformSessionAuthenticationHandler.cs  PlaybackExportArtifactService.cs  PlaybackExportService.cs  PluginOperationEligibilityService.cs  Program.cs  PtzControlService.cs  PublicOfflineDeviceService.cs  RecorderClockObservationCleanupService.cs  RecorderOperationRoutingService.cs  RecorderRegistrationValidator.cs  RecordingSearchService.cs  StreamGatewayRevocationWorker.cs  StreamSessionOrchestrator.cs  VideoPlatform.Api.csproj
src/VideoPlatform.Core/: AgentCredentialEnvelopeContracts.cs  AgentCredentialEnvelopeCryptography.cs  DeviceCertificatePolicy.cs  DevicePluginContracts.cs  DeviceWorkerContracts.cs  Domain.cs  EdgeCommandContracts.cs  EdgeOperationTypes.cs  IRecorderAdapter.cs  NotificationChannelTestRequestedPayload.cs  OfflineDetectionStateMachine.cs  RecorderEndpointHostPolicy.cs  WeComWebhookAddress.cs  WeComWebhookConfiguration.cs
src/VideoPlatform.DeviceWorker/: DeviceWorkerControlPlaneClient.cs  DirectRtspDeviceCollector.cs  DpapiCredentialResolver.cs  IRecorderInventoryCollector.cs  OnvifDeviceCollector.cs  OnvifReadOnlyClient.cs  Program.cs  RecorderCredentialContracts.cs  RecorderInventoryCollectorRegistry.cs  RecorderInventoryWorker.cs  VideoPlatform.DeviceWorker.csproj
src/VideoPlatform.EdgeAgent/: DockerComposeHostOperationExecutor.cs  EdgeAgentControlPlaneClient.cs  EdgeAgentIdentityStore.cs  EdgeAgentOptions.cs  EdgeAgentRuntimeState.cs  EdgeAgentRuntimeWorker.cs  HostOperationWorker.cs  Program.cs  VerifiedDeploymentStore.cs  VideoPlatform.EdgeAgent.csproj
src/VideoPlatform.NotificationWorker/: AlertEventProcessor.cs  NotificationChannelTestEventProcessor.cs  NotificationDispatcher.cs  NotificationProcessingWorker.cs  Program.cs  VideoPlatform.NotificationWorker.csproj
src/VideoPlatform.QtViewer/: CMakeLists.txt  README.md
src/VideoPlatform.QtViewer/cmake/: ViewerThirdParty.cmake
src/VideoPlatform.QtViewer/src/: apiclient.cpp  apiclient.h  camera_tree_widget.h  dock_layout_controller.h  icon_provider.h  login_dialog.cpp  main.cpp  main_window.cpp  mpv_player_widget.cpp  mpv_player_widget.h  theme_manager.cpp  theme_manager.h  video_tile_widget.cpp  videoplatform_dark_theme.json  viewer_action_registry.cpp  viewer_logic.cpp  viewer_logic.h  window_title_bar.cpp  window_title_bar.h
src/VideoPlatform.QtViewer/tests/: dock_layout_controller_tests.cpp  main_window_interaction_tests.cpp  viewer_logic_tests.cpp  window_title_bar_tests.cpp
src/VideoPlatform.Setup/: Program.cs  (+1 more)
src/VisiCore.QtViewer/: CMakeLists.txt  CMakePresets.json  README.md
src/VisiCore.QtViewer/cmake/: ViewerThirdParty.cmake
src/VisiCore.QtViewer/src/: apiclient.cpp  apiclient.h  app_dialog.cpp  app_dialog.h  bookmark_store.cpp  bookmark_store.h  camera_tree_widget.cpp  camera_tree_widget.h  change_password_dialog.cpp  change_password_dialog.h  connection_settings.cpp  connection_settings.h  connection_settings_dialog.cpp  connection_settings_dialog.h  crash_reporter.cpp  crash_reporter.h  dock_layout_controller.cpp  dock_layout_controller.h  export_controller.cpp  export_controller.h  export_download_verifier.h  export_tasks_panel.cpp  export_tasks_panel.h  icon_provider.cpp  login_dialog.cpp  login_dialog.h  main.cpp  main_window.cpp  main_window.h  models.h  mpv_player_widget.cpp  mpv_player_widget.h  playback_controller.cpp  playback_controller.h  preview_controller.cpp  preview_controller.h  ptz_controller.cpp  ptz_controller.h  recording_timeline_widget.cpp  recording_timeline_widget.h  (+14 more)
src/VisiCore.QtViewer/tests/: dock_layout_controller_tests.cpp  local_feature_tests.cpp  main_window_interaction_tests.cpp  viewer_logic_tests.cpp  workspace_controllers_tests.cpp
tests/: admin-ui-smoke.py  linux_deployment_packages_tests.py  openspec_governance_tests.py
tools/: Build-VisiCoreViewerWindows.ps1  admin_system_permissions_qa.py  build-linux-deployment-packages.sh  core-container-smoke.sh  verify-dco.sh  verify-openspec-governance.py  verify-release-promotion.sh
versions/: README.md
(+386 files in other folders)
